syntax = "proto3";

option go_package = "github.com/KumKeeHyun/perisco/perisco/testing/grpc/hello";

package hello;

service HelloService {
    rpc SayHello (HelloRequest) returns (HelloResponse) {}
    rpc HelloSSS (HelloRequest) returns (stream HelloResponse) {}
    rpc HelloCSS (stream HelloRequest) returns (HelloResponse) {}
    rpc HelloBDS (stream HelloRequest) returns (stream HelloResponse) {}
}

message HelloRequest {
    string msg = 1;
}

message HelloResponse {
    string msg = 1;
}